hphp/hack/test/typecheck/argument_unpacking/unpack_call11.php.like_types.exp
File "unpack_call11.php", line 32, characters 16-18:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 48, characters 26-26:
Expected B
File "unpack_call11.php", line 17, characters 28-28:
But got A
File "unpack_call11.php", line 33, characters 26-27:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 49, characters 32-33:
Expected B (variadic argument)
File "unpack_call11.php", line 15, characters 25-25:
But got E
File "unpack_call11.php", line 34, characters 35-36:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 49, characters 32-33:
Expected B (variadic argument)
File "unpack_call11.php", line 15, characters 25-25:
But got E
File "unpack_call11.php", line 35, characters 26-27:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 51, characters 33-33:
Expected E
File "unpack_call11.php", line 15, characters 16-16:
But got B
File "unpack_call11.php", line 35, characters 26-27:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 51, characters 27-27:
Expected B
File "unpack_call11.php", line 15, characters 25-25:
But got E
File "unpack_call11.php", line 35, characters 3-28:
Too few arguments (required 3 but got 1) (Typing[4104])
File "unpack_call11.php", line 51, characters 10-19:
Definition is here
File "unpack_call11.php", line 36, characters 26-28:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 52, characters 27-27:
Expected C
File "unpack_call11.php", line 20, characters 19-19:
But got B
File "unpack_call11.php", line 41, characters 36-37:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 41, characters 36-37:
Expected Traversable<D> (it is unpacked with '...')
File "unpack_call11.php", line 39, characters 12-25:
But got dynamic because it is an unenforceable type
File "unpack_call11.php", line 44, characters 26-27:
Invalid argument (Typing[4110])
File "unpack_call11.php", line 44, characters 26-27:
Expected Traversable<B> (it is unpacked with '...')
File "unpack_call11.php", line 39, characters 12-25:
But got dynamic because it is an unenforceable type
